syntax = "proto3";

option go_package = "shop/pkg/proto";

package shop;

service ProductService {
  rpc GetProductsByCategoryId(GetProductsRequest) returns (GetProductsResponse) {}
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse) {}
}

message GetProductsRequest {
  string category_id = 1;
  int64 page = 2;
  int64 limit = 3;
}

message GetProductsResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  int64 price = 3;
  string category_id = 4;
  string created_at = 5;
}

message GetCategoriesRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetCategoriesResponse {
  repeated Category categories = 1;
}

message Category {
  string id = 1;
  string name = 2;
  string created_at = 3;
}
